<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="tambah">Add</string>
    <string name="tanggal">Tanggal : 29 Januari 2018</string>
    <string name="pemasukkan">Rp. 50.000.000,-</string>
    <string name="pengeluaran">Rp. 50.000,-</string>
    <string name="tanggalRe">30 Des - 29 Jan 2018</string>
    <string name="total">Total</string>
    <string name="kataPemasukan">Pemasukan</string>
    <string name="kataPengeluaran">Pengeluaran</string>
    <string name="laporan_per_bulan">Laporan Per Bulan          ></string>
    <string name="laporan_per_minggu">Laporan Per Minggu        ></string>
    <string name="laporan_per_Kategory">laporan Per Kategory    ></string>
    <string name="tampilkan_semua">Tampilkan Semua              ></string>
    <string name="nama">Rossevine Artha Nathasya</string>
    <string name="email">Rossevine.Artha@Gmail </string>
    <string name="alokasiDana">Alokasi Dana</string>
    <string name="ubahPass">Ubah Password</string>
    <string name="kategory">Category</string>
    <string name="Jumlah">Jumlah</string>
    <string name="title_activity_login">Sign in</string>
    <string name="katanama">Name</string>
    <string name="kataemail">Email</string>
    <string name="kataPassword">Password</string>
    <string name="kataPasswordOld">Old Password</string>
    <string name="kataPasswordNew">New Password</string>
    <string name="kataPasswordReNew">Re New Password</string>
    <string name="kataRePassword">Re-Password</string>
    <string name="registrasi">Registrasi</string>
    <string name="masukPenge">Add Pemasukan/Pengeluwaran</string>
    <string name="ubahPassword">Ganti Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
