<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rossevine.project_mobile_1.UbahPassword"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kataPasswordOld"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kataPasswordNew"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtNewRePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kataPasswordReNew"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonGantiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubahPassword" />
</LinearLayout>
