<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rossevine.project_mobile_1.ProfileActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textSize="@dimen/tulisanTotal" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="@dimen/fab_margin" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="                " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="viewEnd">

        <Button
            android:id="@+id/buttonAlokasiData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alokasiDana" />

        <Button
            android:id="@+id/buttonUbahPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubahPass" />

        <Button
            android:id="@+id/buttonMasukanPengeluwaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukPenge" />
    </LinearLayout>

</LinearLayout>
