<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.rossevine.project_mobile_1.ReportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_weight="1"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tanggalRe"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tulisanSemua" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tulisanTotal"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kataPengeluaran"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fab_margin" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pemasukkan"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fab_margin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="57dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kataPengeluaran"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fab_margin" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pengeluaran"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fab_margin" />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundTombol"
                android:elevation="0dp"
                android:text="@string/laporan_per_bulan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fab_margin" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundTombol"
                android:text="@string/laporan_per_minggu"
                android:textSize="@dimen/fab_margin" />

        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/backgroundTombol"
            android:text="@string/laporan_per_Kategory"
            android:textSize="@dimen/fab_margin" />
    </ScrollView>

</LinearLayout>
